--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,283 @@
-# FFmpeg klasörü (otomatik indirilen)
+# ===========================================
+# YouTube Downloader - .gitignore
+# ===========================================
+
+# Application-specific files
+# ===========================================
+# FFmpeg directory (auto-downloaded)
 ffmpeg/
 
-# Log dosyaları
+# Log files
 *.log
 app_log.txt
 
-# Archive dosyaları
+# Archive files
 archive.txt
 
-# Cookies dosyaları
+# Cookies files
 *.cookies
 youtube_cookies.txt
 
-# Python cache
+# Downloaded content (if any test downloads)
+downloads/
+output/
+
+# Build and Distribution
+# ===========================================
+# PyInstaller build directories
+build/
+dist/
+
+# Executable files
+*.exe
+*.app
+*.deb
+*.rpm
+*.dmg
+*.msi
+
+# PyInstaller cache and temp files
+*.manifest
+*.spec.bak
+
+# Setup.py build directories
+build/
+dist/
+*.egg-info/
+
+# Wheel files
+*.whl
+
+# Python
+# ===========================================
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
 
-# Virtual environment
-.venv/
-venv/
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Virtual environments
+.env
+.venv
 env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.conda/
 
-# IDE dosyaları
+# IDE and Editor files
+# ===========================================
+# Visual Studio Code
 .vscode/
+*.code-workspace
+
+# PyCharm
 .idea/
+*.iws
+*.iml
+*.ipr
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Operating System
+# ===========================================
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# Temporary files
+# ===========================================
+*.tmp
+*.temp
+*.bak
+*.backup
+*.orig
+*.rej
 *.swp
 *.swo
 
-# Geçici dosyalar
-*.tmp
-*.temp 
+# Archives and compressed files
+# ===========================================
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.tgz
+*.bz2
+*.xz
+
+# Media files (in case test downloads happen)
+# ===========================================
+*.mp4
+*.mkv
+*.avi
+*.mov
+*.wmv
+*.flv
+*.webm
+*.m4v
+*.3gp
+*.mp3
+*.wav
+*.flac
+*.aac
+*.ogg
+*.wma
+*.m4a
+
+# Subtitle files
+*.srt
+*.vtt
+*.ass
+*.ssa
+*.sub
+*.sbv
+
+# Documentation build
+# ===========================================
+docs/_build/
+docs/build/
+site/
+
+# Security and sensitive files
+# ===========================================
+.env
+.env.local
+.env.*.local
+config.json
+secrets.json
+*.key
+*.pem
+*.p12
+*.pfx
+
+# Release preparation
+# ===========================================
+*.tar.gz
+release/
+releases/
+packages/
+
+# Jupyter Notebook
+# ===========================================
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Database files
+# ===========================================
+*.db
+*.sqlite
+*.sqlite3
+
+# Node.js (if any frontend tools used)
+# ===========================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock 
