--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -50,6 +50,8 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
+        
+        # Install basic dependencies
         sudo apt-get install -y \
           libgtk-3-dev \
           libglib2.0-dev \
@@ -57,14 +59,27 @@ jobs:
           libpango1.0-dev \
           libgdk-pixbuf2.0-dev \
           libatk1.0-dev \
-          libwebkit2gtk-4.0-dev \
-          libsoup2.4-dev \
-          libjavascriptcoregtk-4.0-dev \
           pkg-config \
           build-essential \
           libffi-dev \
           libssl-dev \
-          ffmpeg
+          ffmpeg \
+          xvfb
+        
+        # Try to install WebKit with fallback
+        sudo apt-get install -y libwebkit2gtk-4.1-dev || \
+        sudo apt-get install -y libwebkit2gtk-4.0-dev || \
+        echo "WebKit dev packages not available"
+        
+        # Try to install JavaScriptCore with fallback
+        sudo apt-get install -y libjavascriptcoregtk-4.1-dev || \
+        sudo apt-get install -y libjavascriptcoregtk-4.0-dev || \
+        echo "JavaScriptCore dev packages not available"
+        
+        # Try to install Soup with fallback
+        sudo apt-get install -y libsoup-3.0-dev || \
+        sudo apt-get install -y libsoup2.4-dev || \
+        echo "Soup dev packages not available"
     
     - name: Install Python dependencies
       run: |
@@ -76,8 +91,15 @@ jobs:
       run: |
         python -c "import os; print('FFmpeg system installation:', os.system('ffmpeg -version'))"
     
+    - name: Setup virtual display for GUI
+      run: |
+        export DISPLAY=:99
+        Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+        sleep 3
+    
     - name: Build Linux executable
       run: |
+        export DISPLAY=:99
         pyinstaller youtube_downloader_linux.spec --clean --noconfirm
     
     - name: Make executable
